[gd_scene load_steps=7 format=3 uid="uid://b4a33ep2tkxj4"]

[ext_resource type="Material" uid="uid://dqjrj28ws761s" path="res://map.tres" id="1_4py36"]
[ext_resource type="Script" path="res://map.gd" id="2_n3y1y"]
[ext_resource type="Texture2D" uid="uid://b55bibaafhf24" path="res://map/map.bmp" id="2_o11yq"]
[ext_resource type="Script" path="res://ui.gd" id="4_ah6qn"]
[ext_resource type="Script" path="res://camera.gd" id="5_buw72"]

[sub_resource type="LabelSettings" id="LabelSettings_cyl33"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="World" type="Node2D"]

[node name="Map" type="Sprite2D" parent="."]
texture_filter = 4
material = ExtResource("1_4py36")
texture = ExtResource("2_o11yq")
centered = false
script = ExtResource("2_n3y1y")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("4_ah6qn")

[node name="ProvincePanel" type="Panel" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -120.0
offset_right = 250.0
grow_vertical = 0
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ProvincePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProvinceName" type="Label" parent="CanvasLayer/ProvincePanel/VBoxContainer"]
layout_mode = 2
offset_right = 250.0
offset_bottom = 26.0
text = "Default"
horizontal_alignment = 1

[node name="Population" type="Label" parent="CanvasLayer/ProvincePanel/VBoxContainer"]
layout_mode = 2
offset_top = 30.0
offset_right = 250.0
offset_bottom = 56.0
text = "Population: 10000"

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 53.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Money" type="Label" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2
offset_top = 15.0
offset_right = 1.0
offset_bottom = 38.0

[node name="Panel" type="Panel" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_right = 342.0
offset_bottom = 36.0
grow_vertical = 0

[node name="GameSpeed" type="Label" parent="CanvasLayer/Panel/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -13.0
offset_right = -83.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
text = "0.5"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -15.0
offset_right = -5.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2

[node name="IncreaseSpeed" type="Button" parent="CanvasLayer/Panel/Panel/HBoxContainer"]
layout_mode = 2
offset_right = 35.0
offset_bottom = 31.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
text = "+"

[node name="DecreaseSpeed" type="Button" parent="CanvasLayer/Panel/Panel/HBoxContainer"]
layout_mode = 2
offset_left = 39.0
offset_right = 74.0
offset_bottom = 31.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
text = "-"

[node name="Date" type="Label" parent="CanvasLayer/Panel/Panel"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 0
offset_left = 3.0
offset_top = 4.0
offset_right = 87.0
offset_bottom = 34.0
text = "Some Date"
label_settings = SubResource("LabelSettings_cyl33")
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
smoothing_speed = 3.0
script = ExtResource("5_buw72")
